# -OrangePi-AI-Pro-Linux-

./: CMakeLists.txt  README.md  draft4.c  issue.md  二次开发计划文档.md
.serena/: project.yml
PRD文档/: prd.md
build-on/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  open-pipe-media-player
doc/: 各阶段进度文档.md  多次拖动进度条卡死问题分析.md  录屏检查清单.md  演示脚本.md  简历项目表述.md
include/: app.h  pipeline.h  player.h  ui.h
src/: app.c  main.c  pipeline.c  player.c  ui.c
